# AbletonMCP

./: .gitignore  CLAUDE.md  INSTALL_WINDOWS.md  LICENSE  README.ja.md  README.md  claude_desktop_config.example.json  pyproject.toml  setup.bat
skills/ableton-music/: SKILL.md
src/: __init__.py  ableton_osc.py  agent.py  arrangement_generator.py  automation_generator.py  cli.py  mcp_server.py  mixing_assistant.py  sample_search.py  synth_generator.py
