[project]
name = "ableton-mcp"
version = "2.0.0"
description = "自然言語でAbleton Liveを完全コントロールするAIエージェント"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "python-osc>=1.8.0",
    "rich>=13.0.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
freesound = [
    "requests>=2.28.0",
]
cli = [
    "anthropic>=0.40.0",
]

[project.scripts]
ableton-agent = "src.cli:main"
ableton-mcp = "src.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
